# minispot

./: .gitignore  CMakeLists.txt  README.md  compile.py  resources.rc
src/: main.cpp
src/auth/: auth.cpp  auth.h
src/utils/: utils.cpp  utils.h
src/webview/: webview.cpp  webview.h
src/webview/async/: asyncwv2.cpp  asyncwv2.h
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.svelte  Credentials.svelte  Player.svelte  Root.svelte  app.css  state.ts  vite.d.ts
web/src/lib/: LoadingText.svelte  spoapi.ts
